<resources>
    <string name="app_name">GoogleClone</string>
    <string name="mail_content_description">Mail Content Description</string>
    <string name="meet_content_description">Meet Content Description</string>
    <string name="mail">Mail</string>
    <string name="meet">Meet</string>
    <string name="profile">Profile</string>
    <string name="search_in_emails">Search in emails</string>
    <string name="gmail">Gmail</string>

    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="all_inboxes">All inboxes</string>
    <string name="starred">Starred</string>
    <string name="snoozed">Snoozed</string>
    <string name="important">Important</string>
    <string name="all_labels">ALL LABELS</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="all_mail">All mail</string>
    <string name="spam">Spam</string>
    <string name="bin">Bin</string>
    <string name="calendar">Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="google_apps">GOOGLE APPS</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="archive">Archive</string>
    <string name="add_to_tasks">Add to Tasks</string>
    <string name="report_spam">Report spam</string>
    <string name="print">Print</string>
    <string name="view_in_light_theme">View in light theme</string>
    <string name="mute">Mute</string>
    <string name="change_labels">Change labels</string>
    <string name="mark_as_important">Mark as important</string>
    <string name="snooze">Snooze</string>
    <string name="move_to">Move to</string>
    <string name="delete">Delete</string>
    <string name="take_me_to_gmail">Take Me To Gmail</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email</string>
    <string name="new_meeting">New meeting</string>
    <string name="join_a_meeting">Join a meeting</string>
    <string name="authid" translatable="false">269752629440-k3n1048kgg80jqsd9r4qh6nlcaue5jks.apps.googleusercontent.com</string>
    <string name="email_origin">email_origin</string>
    <string name="add_star">Add star</string>
    <string name="you_can_now_add_all_your_email_addresses">You can now add all your email addresses</string>
    <string name="learn_more">Learn more</string>
    <string name="add_an_email_address">Add An Email Address</string>
    <string name="discard">Discard</string>
    <string name="save_draft">Save draft</string>
    <string name="condifential_mode">Condifential Mode</string>
    <string name="add_from_contacts">Add from Contacts</string>
    <string name="schedule_send">Schedule send</string>
</resources>