<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/interfaceColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        style="@style/interfaceItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mailButton"
        app:icon="@drawable/ic_baseline_email_24"
        android:contentDescription="@string/mail_content_description"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"

        />

    <TextView
        style="@style/interfaceItem"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mailTextView"
        android:text="@string/mail"
        android:layout_below="@+id/mailButton"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:id="@+id/meetButton"
        app:icon="@drawable/ic_baseline_meeting_room_24"
        style="@style/interfaceItem"
        android:contentDescription="@string/meet_content_description"


        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_below="@+id/meetButton"
        style="@style/interfaceItem"
        android:text="@string/meet"
        android:id="@+id/meetTextView"
        android:layout_alignParentEnd="true" />

</RelativeLayout>