<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/replyButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reply"
        app:icon="@drawable/ic_baseline_reply_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/replyAllButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reply_all"
        app:icon="@drawable/ic_baseline_reply_all_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forwardButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/forward"
        app:icon="@drawable/ic_baseline_arrow_forward_24" />

</LinearLayout>